package graphadt.GraphComponents;

public class Node {
    private String id;
    
    public Node(String id){
        this.id = id;
    }

    public String getId(){
        return id;
    }
}
